--- a/stylegrid.css
+++ b/stylegrid.css
@@ -8,7 +8,7 @@ img {
 }
 
 body {
-  background-color: gray;
+  background-color: hotpink;
   font-size: 18px;
   font-family: Arial, Helvetica, Sans-Serif;
   margin: 50px;
@@ -146,7 +146,7 @@ body {
 background-color: white;
 padding: 15px;
 text-align: center;
-border: 2px solid gray;
+border: 2px solid black;
 border-radius: 3px;
 box-shadow: 0 0 2px rgba(0,0,0,0,5);
 }
