--- a/stylegrid.css
+++ b/stylegrid.css
@@ -8,7 +8,7 @@ img {
 }
 
 body {
-  background-color: hotpink;
+  background-color: gray;
   font-size: 18px;
   font-family: Arial, Helvetica, Sans-Serif;
   margin: 50px;
