--- a/stylegrid.css
+++ b/stylegrid.css
@@ -207,7 +207,7 @@ box-shadow: 0 0 2px rgba(0,0,0,0,5);
   .menu-toggle {
     display: flex;
   }
-  nav ul {
+  .menu ul {
     position: absolute;
     right: 0;
     height: 100vh;
@@ -218,13 +218,13 @@ box-shadow: 0 0 2px rgba(0,0,0,0,5);
     justify-content: space-evenly;
     align-items: center;
     z-index: -1;
-    transform: translateX(100%);
+    transform: translateY(-100%);
     opacity: 0;
     transition: all 1s;
   }
-  nav ul.slide {
+  .menu ul.slide {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateY(0);
   }
 }
 @media (max-width: 600px) {
